--- a/src/app/scss/components/_buttons.scss
+++ b/src/app/scss/components/_buttons.scss
@@ -6,7 +6,7 @@
   text-transform: capitalize;
   color: rgba(var(--primary), 0.8);
   font-family: Montserrat-SemiBold;
-  @include spacing(padding, 4, 5);
+  @include p(4, 5);
   border-radius: 15px;
   text-decoration: none;
   font-size: 18px;
@@ -42,5 +42,5 @@
 }
 
 .base-button > .icon {
-  @include spacing(margin-right, 2);
+  @include mr(2);
 }
